loki/dev/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-internal
  namespace: guardian
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
    networking.gke.io/internal-load-balancer-subnet: "dev-loadbalancer"
    networking.gke.io/internal-load-balancer-allow-global-access: "true"
spec:
  ports:
    - name: http-metrics
      protocol: TCP
      port: 3100
      targetPort: http-metrics
  selector:
    app: loki
    release: loki
  type: LoadBalancer
