loki/dev/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: guardian
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`loki.dev.naturalselectionlabs.com`)
      services:
        - name: loki-gateway
          port: 80
